# OpenGL-boilerplate-C

./: CMakeLists.txt
src/: main.c
